Code cleanup only